# algokit-utils-ts

./: .gitignore  package-lock.json  package.json
src/types/: application-client.spec.ts
tests/example-contracts/txn-arg/: application.json  approval.teal  contract.json  pyproject.toml  txn_arg.py
